fixed minor body overflow issue

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
     margin: 0;
     width: 100vw;
-    max-width: 100vw;
+    /* max-width: 100vw; */
+    overflow-x: hidden !important;
     font-family: 'Press Start 2P', sans-serif;
     font-size: 16px;
     color: rgb(255, 255, 255);
-    
     background-color: black;
 }
 
@@ -23,7 +23,7 @@ nav{
     align-items: center;
     justify-content: space-evenly;
     background-color: red;
-    max-width: 100vw;
+    /* max-width: 100%; */
     overflow: hidden;
 }
 
@@ -272,7 +272,7 @@ nav > img{
 .pokeball-button:hover{
     transform: scale(1.1);
 }
-  
+
 .pokeball-top {
     position: absolute;
     top: 0;
@@ -283,7 +283,7 @@ nav > img{
     border-top-right-radius: 50% 100%;
     background-color: red;
 }
-  
+
 .pokeball-bottom {
     position: absolute;
     top: 50%;
@@ -294,7 +294,7 @@ nav > img{
     border-bottom-right-radius: 50% 100%;
     background-color: white;
 }
-  
+
 .pokeball-x {
     position: absolute;
     top: 50%;
@@ -305,7 +305,7 @@ nav > img{
     background-color: black;
     border-radius: 10px;
 }
-  
+
 .pokeball-center-inner {
     position: absolute;
     top: 50%;
@@ -398,7 +398,7 @@ nav > img{
     background-color: transparent;
     /* border: 1px solid gray; */
 }
-  
+
 .stat-bar {
     height: 100%;
     /* background-color: green; */
